<resources>
    <string name="app_name">HungerBellShipper</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="orderTimeString">13:00 PM</string>
    <string name="orderNumberString">Order Number:1233455</string>
    <string name="orderAddressString">Address: 1233455</string>
    <string name="codString">COD</string>
    <string name="ship_nowString">Ship Now</string>
    <string name="title_activity_shipping">Map</string>
    <string name="start_tripString">Start Trip</string>
    <string name="callString">Call</string>
    <string name="doneString">Done</string>
    <string name="dateString">Date</string>
    <string name="nameString">Name: Deep</string>
    <string name="name_String">Name</string>
    <string name="phoneString">Phone</string>
    <string name="showString">Show</string>
    <string name="log_out">Log Out</string>
</resources>