<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShippingActivity">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShippingActivity"
        tools:ignore="FragmentTagUsage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_show"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/showString"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.button.MaterialButton>

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/expandable_layout"
            app:el_expanded="false"
            app:el_duration="500"
            app:el_parallax="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="16dp"
                            android:weightSum="10">

                            <ImageView
                                android:id="@+id/img_food_image"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="3"
                                android:contentDescription="@null"
                                android:scaleType="fitXY" />

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_weight="7"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/txt_date"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/montserrat"
                                    android:text="@string/dateString"
                                    android:textSize="16sp"
                                    android:textStyle="italic" />

                                <TextView
                                    android:id="@+id/txt_order_number"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/montserrat"
                                    android:text="@string/orderNumberString"
                                    android:textColor="@android:color/holo_blue_light"
                                    android:textSize="16sp"
                                    android:textStyle="italic" />

                                <TextView
                                    android:id="@+id/txt_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/montserrat"
                                    android:text="@string/nameString"
                                    android:textSize="16sp"
                                    android:textStyle="italic" />

                                <TextView
                                    android:id="@+id/txt_address"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/montserrat"
                                    android:text="@string/orderAddressString"
                                    android:textSize="16sp"
                                    android:textStyle="italic" />


                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="3">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btn_start_trip"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_weight="1"
                                android:text="@string/start_tripString"
                                android:textSize="12sp" />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btn_call"
                                style="@style/Widget.MaterialComponents.Button.Icon"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_weight="1"
                                android:text="@string/callString"
                                android:textSize="12sp"
                                app:icon="@drawable/ic_call_24" />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btn_done"
                                style="@style/Widget.MaterialComponents.Button.Icon"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:layout_weight="1"
                                android:backgroundTint="#3C3535"
                                android:text="@string/doneString"
                                android:textSize="12sp"
                                app:icon="@drawable/ic_done_24" />


                        </LinearLayout>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <fragment
                            android:id="@+id/places_autocomplete_fragment"
                            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </net.cachapa.expandablelayout.ExpandableLayout>



    </LinearLayout>


</merge>